# Vegam_solutions_repo

./: CMakeLists.txt  LICENSE  README.md
Isaac_world/: Differential_Drive.usd  container_scene.usd
Isaac_world/configuration/: container_scene_physics.usd  container_scene_robot.usd
config/: bot_params.yml
include/vegam_solution_assignment/: container_bot.hpp  detection.hpp
src/: container_bot.cpp  detection.cpp  main.cpp
